--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,128 @@
-## Setup machine
-version: 1.0
-machine:
-  java:
-    version: 'oraclejdk8'
-  node:
-    version: v8.9.0
-  ruby:
-    version: 2.1.2
-  environment:
-    ANDROID_HOME: /usr/local/android-sdk-linux
+ersion: 2
 
+aliases:
+  - &restore-cache
+      keys:
+        - dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/cli-scripts/package.json" }}
+        - dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
 
-## Setup dependencies
-dependencies:
-  override:
-    - npm install
+  - &save-cache
+      key: dependency-cache-{{ .Branch }}-{{ checksum "package.json" }}
+      paths:
+        - node_modules
 
-  pre:
-    - npm install -g ionic cordova
-    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository,android-25
-    - echo y | android update sdk --no-ui --all --filter build-tools-25.0.0
+  - &save-cache-cli-framework
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-framework/package.json" }}
+      paths:
+        - packages/@ionic/cli-framework/node_modules
 
-  cache_directories:
-    - /usr/local/android-sdk-linux/tools
-    - /usr/local/android-sdk-linux/build-tools/24.0.1
+  - &save-cache-cli-hooks
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+      paths:
+        - packages/@ionic/cli-hooks/node_modules
 
-  post:
-    - mkdir www
-    - ionic cordova platform add android -Y --noresources
+  - &save-cache-cli-utils
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/cli-utils/package.json" }}
+      paths:
+        - packages/@ionic/cli-utils/node_modules
 
-test:
-  pre:
-    - npm install
+  - &save-cache-discover
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/discover/package.json" }}
+      paths:
+        - packages/@ionic/discover/node_modules
 
-  override:
-    - ionic cordova build android -Y
-    - cp -r platforms/android/build/outputs/apk $CIRCLE_ARTIFACTS
-    - mocha test --reporter mocha-junit-reporter:
-        environment:
-          MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
+  - &save-cache-lab
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/lab/package.json" }}
+      paths:
+        - packages/@ionic/lab/node_modules
+
+  - &save-cache-schematics-angular
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+      paths:
+        - packages/@ionic/schematics-angular/node_modules
+
+  - &save-cache-v1-toolkit
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
+      paths:
+        - packages/@ionic/v1-toolkit/node_modules
+
+  - &save-cache-cli-scripts
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/cli-scripts/package.json" }}
+      paths:
+        - packages/cli-scripts/node_modules
+
+  - &save-cache-ionic
+      key: dependency-cache-{{ .Branch }}-{{ checksum "packages/ionic/package.json" }}
+      paths:
+        - packages/ionic/node_modules
+
+defaults: &defaults
+  working_directory: /tmp/workspace
+
+base: &base
+  <<: *defaults
+  steps:
+    - checkout
+    - restore_cache: *restore-cache
+    - run: npm install
+    - save_cache: *save-cache
+    - run: npm run bootstrap
+    - save_cache: *save-cache-cli-framework
+    - save_cache: *save-cache-cli-hooks
+    - save_cache: *save-cache-cli-utils
+    - save_cache: *save-cache-discover
+    - save_cache: *save-cache-lab
+    - save_cache: *save-cache-schematics-angular
+    - save_cache: *save-cache-v1-toolkit
+    - save_cache: *save-cache-cli-scripts
+    - save_cache: *save-cache-ionic
+    - run: npm run lint
+    - run: npm run test
+    - persist_to_workspace:
+        root: /tmp/workspace
+        paths:
+          - "*"
+
+jobs:
+  node-6:
+    docker:
+      - image: circleci/node:6
+    <<: *base
+  node-8:
+    docker:
+      - image: circleci/node:8
+    <<: *base
+  node-latest:
+    docker:
+      - image: circleci/node:latest
+    <<: *base
+  deploy:
+    <<: *defaults
+    docker:
+      - image: circleci/node:8
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: npm run publish:ci-4.x -- --yes
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - node-6
+      - node-8
+      - node-latest
+      # - deploy:
+      #     requires: [node-6, node-8, node-latest]
+      #     filters:
+      #       branches:
+      #         only: master
