--- a/package.json
+++ b/package.json
@@ -5,11 +5,24 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "bootstrap": "lerna bootstrap && npm run build",
+    "clean": "lerna run clean",
+    "lint": "lerna run lint --parallel",
+    "lint:fix": "lerna run lint -- -- --fix",
+    "link": "lerna exec npm link",
+    "unlink": "lerna exec npm unlink",
+    "test": "lerna run test",
+    "build": "lerna run build",
+    "watch": "lerna run watch --parallel",
+    "docs": "node packages/cli-scripts/bin/ionic-cli-scripts docs",
+    "docs:watch": "chokidar 'packages/cli-scripts/dist/docs/**/*.js' -c 'npm run docs'",
+    "publish:rc": "lerna publish --exact --npm-tag=rc",
+    "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
+    "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
+    "publish": "lerna publish --exact",
+    "precommit": "npm run lint"
   },
   "dependencies": {
     "@angular/animations": "5.2.9",
@@ -41,7 +54,11 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "chokidar-cli": "^1.2.0",
+    "husky": "^0.14.3",
+    "lerna": "^2.9.1",
+    "tslint-ionic-rules": "latest"
   },
   "description": "An Ionic project",
   "cordova": {
