--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ base: &base
     - save_cache: *save-cache-v1-toolkit
     - save_cache: *save-cache-cli-scripts
     - save_cache: *save-cache-ionic
+    - run: npm run ionic:build
     - run: npm run lint
     - run: npm run test
     - persist_to_workspace:
@@ -113,6 +114,7 @@ jobs:
           at: /tmp/workspace
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
       - run: npm run publish:ci-4.x -- --yes
+      - cp -r platforms/android/build/outputs/apk $CIRCLE_ARTIFACTS
 
 workflows:
   version: 2
