--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ base: &base
     - save_cache: *save-cache-v1-toolkit
     - save_cache: *save-cache-cli-scripts
     - save_cache: *save-cache-ionic
-    - run: npm install -g ionic cordova
+    - run: npm install ionic cordova
     - run: ionic cordova build ios
     - run: ionic cordova build android 
     - run: npm run lint
@@ -114,9 +114,7 @@ workflows:
   version: 2
   build:
     jobs:
-      - node-6
       - node-8
-      - node-latest
       # - deploy:
       #     requires: [node-6, node-8, node-latest]
       #     filters:
